<resources>
    <string name="app_name">AtYourService</string>
    <string name="sign_up">Sign up</string>
    <string name="please_tell_us_about_yourself">Please tell us about yourself</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="text_fragment_dialog_resetting_password">Resetting password</string>
    <string name="text_fragment_dialog_message">Please enter your email, we will send you a new password</string>
    <string name="text_fragment_dialog_text_send">Send</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="create_account"><u>Create account</u></string>
    <string name="new_user">New user?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in">Sign in</string>
    <string name="or_enter_with_your_account">or enter with your account:</string>

    <string name="text_location"><u>Select location</u></string>
    <string name="text_welcome">Welcome</string>
    <string name="text_search_for_service">search for service</string>
    <string name="text_popular_companies">Popular companies</string>
    <string name="text_categories">Categories</string>
    <string name="text_top_rated_experts">Top rated experts</string>
    <string name="logo_company_3">Logo company 3</string>
    <string name="unknown_error">Unexpected error occurred. Please try again</string>
    <string name="already_signed_in_error">You already signed in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>