<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.atyourservice.auth.ui.registration.RegistrationFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/registration_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/registration_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/kadwa_regular"
            android:gravity="center_vertical"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <TextView
        android:id="@+id/registration_title_text"
        style="@style/header_title"
        android:text="@string/please_tell_us_about_yourself"
        app:layout_constraintBottom_toTopOf="@id/registration_first_name_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/right_border"
        app:layout_constraintStart_toStartOf="@+id/left_border"
        app:layout_constraintTop_toBottomOf="@id/registration_toolbar" />

    <EditText
        android:id="@+id/registration_first_name_edit_text"
        style="@style/edit_text"
        android:layout_gravity="center"
        android:autofillHints="name"
        android:drawableStart="@drawable/ic_badge"
        android:hint="@string/first_name"
        android:inputType="text"
        android:lines="1"
        android:maxLength="255"
        app:layout_constraintBottom_toTopOf="@id/registration_last_name_edit_text"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/registration_title_text" />

    <EditText
        android:id="@+id/registration_last_name_edit_text"
        style="@style/edit_text"
        android:layout_gravity="center"
        android:autofillHints="name"
        android:drawableStart="@drawable/ic_badge"
        android:hint="@string/last_name"
        android:inputType="text"
        android:lines="1"
        android:maxLength="255"
        app:layout_constraintBottom_toTopOf="@id/registration_email_edit_text"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/registration_first_name_edit_text" />

    <EditText
        android:id="@+id/registration_email_edit_text"
        style="@style/edit_text"
        android:layout_gravity="center"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLength="255"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/registration_last_name_edit_text" />

    <EditText
        android:id="@+id/registration_password_edit_text"
        style="@style/edit_text"
        android:layout_gravity="center"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_key"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="255"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/registration_email_edit_text" />

    <Button
        android:id="@+id/registration_submit_button"
        style="@style/button_submit"
        android:text="@string/submit"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintTop_toBottomOf="@id/registration_password_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>