<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    android:scrollbars="none"
    tools:context="com.atyourservice.search.ui.SearchEmptyInputFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/search_popular_companies_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/kadwa_regular"
            android:text="@string/text_popular_companies"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/search_logo_company_1_image"
            android:layout_width="92dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/circle_logo_company"
            app:layout_constraintEnd_toStartOf="@+id/search_logo_company_2_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/search_logo_company_2_image"
            app:srcCompat="@drawable/colorfull_circle_logo_1" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/search_logo_company_2_image"
            android:layout_width="92dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/circle_logo_company"
            app:layout_constraintEnd_toStartOf="@+id/search_logo_company_3_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/search_logo_company_1_image"
            app:layout_constraintTop_toBottomOf="@+id/search_popular_companies_text"
            app:srcCompat="@drawable/colorfull_circle_logo_2" />

        <ImageButton
            android:id="@+id/search_logo_company_3_image"
            android:layout_width="92dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circle_logo_company"
            android:contentDescription="@string/logo_company_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/search_logo_company_2_image"
            app:layout_constraintTop_toTopOf="@+id/search_logo_company_2_image"
            app:srcCompat="@drawable/colorfull_circle_logo_3" />

        <TextView
            android:id="@+id/search_categories_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/kadwa_regular"
            android:text="@string/text_categories"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_logo_company_1_image" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_categories_recycler"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_categories_text"
            tools:listitem="@layout/main_category_card" />

        <TextView
            android:id="@+id/search_top_rated_experts_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/kadwa_regular"
            android:text="@string/text_top_rated_experts"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_categories_recycler" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_top_rated_experts_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_top_rated_experts_text"
            tools:listitem="@layout/expert_card" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>