<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context="com.atyourservice.search.ui.MainStartedFragment"
    android:scrollbars="none"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_popular_companies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/kadwa_regular"
            android:text="@string/text_popular_companies"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_logo_company_1"
            android:layout_width="92dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/image_logo_company_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_logo_company_2"
            android:background="@drawable/circle_logo_company"
            app:srcCompat="@drawable/colorfull_circle_logo_1" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_logo_company_2"
            android:layout_width="92dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/image_logo_company_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/image_logo_company_1"
            app:layout_constraintTop_toBottomOf="@+id/text_popular_companies"
            android:background="@drawable/circle_logo_company"
            app:srcCompat="@drawable/colorfull_circle_logo_2" />

        <ImageButton
            android:id="@+id/image_logo_company_3"
            android:layout_width="92dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:srcCompat="@drawable/colorfull_circle_logo_3"
            android:background="@drawable/circle_logo_company"
            app:layout_constraintStart_toEndOf="@+id/image_logo_company_2"
            app:layout_constraintTop_toTopOf="@+id/image_logo_company_2"/>

        <TextView
            android:id="@+id/text_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/kadwa_regular"
            android:text="@string/text_categories"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_logo_company_1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_categories"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_categories"
            tools:listitem="@layout/main_category_card"/>

        <TextView
            android:id="@+id/text_top_rated_experts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/kadwa_regular"
            android:text="@string/text_top_rated_experts"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_categories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_top_rated_experts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_top_rated_experts"
            tools:listitem="@layout/specialist_card"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>